# astro-core

./: .gitignore  LICENSE  pyproject.toml  readme.md
astro_core/: __init__.py  aspects.py  astrocalc.py
